--- a/_includes/resumer_02-profetional.html
+++ b/_includes/resumer_02-profetional.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="clear-mrg">
             
-            <h2 class="title-thin text-muted">职业技能</h2>
+            <h2 class="title-thin text-muted">教学经历和成果</h2>
 
             <div class="col-sm-6 clear-mrg">
 
