--- a/_includes/resumer_03-education.html
+++ b/_includes/resumer_03-education.html
@@ -10,16 +10,14 @@
 
                 <div class="ref-info">
                     <div class="ref-author">
-                        <strong>大连外国语大学</strong>
-                        <span>2010 - 2014 | 软件工程</span>
+                        <strong>上海交通大学</strong>
+                        <span>计算机应用</span>
                     </div>
 
                     <blockquote class="ref-cont clear-mrg">
-                        <p>学习计算机专业基础知识，并获得国家励志奖学金3次，一等奖学金2次，大连市三好学生。
+                        <p>计算机应用专业博士毕业。
                         </p>
-                        <p>作为班级团支书，多次组织班级活动。 作为学生会外联部部长，多次联合校外企业赞助学校活动。
-                        </p>
-                    </blockquote>
+                        </blockquote>
                 </div>
             </div><!-- .ref-box -->
         </div><!-- .col-sm-6 -->
