--- a/_includes/resumer_01-basic.html
+++ b/_includes/resumer_01-basic.html
@@ -11,7 +11,7 @@
                 <dd>wenuandai</dd>
 
                 <dt class="text-upper">e-mail</dt>
-                <dd><a href="mailto:kydai@fudan.edu.cn">xxxx@xx.com</a></dd>
+                <dd><a href="mailto:kydai@fudan.edu.cn">kydai@fudan.edu.cn</a></dd>
             </dl>
         </div><!-- .col-sm-6 -->
     </div><!-- .row -->
