change education and caree experience

--- a/_includes/resumer_02-profetional.html
+++ b/_includes/resumer_02-profetional.html
@@ -2,11 +2,142 @@
     <div class="row">
         <div class="clear-mrg">
             
-            <h2 class="title-thin text-muted">教学经历和成果</h2>
+            <h2 class="title-thin text-muted">职业技能</h2>
 
             <div class="col-sm-6 clear-mrg">
 
-             2020年获评复旦大学毕业生“我心目中的好老师”，2018年度入选全国首届“高校计算机专业优秀教师奖励计划”。主持教改项目20项左右。近年来作为第一负责人的主要教学获奖有：2020年获复旦大学首届教学创新大赛一等奖；2018年度中国高校计算机教育MOOC联盟优秀案例奖；2017年获复旦大学校级教学成果奖一等奖，上海市教学成果奖二等奖；2018年 获得“第二届全国高等学校计算机教育教学青年教师优秀论文奖二等奖”；2017年获超星主办的上海市首届移动教学大赛一等奖。
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Java</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">HTML</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">CSS</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Javascript</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                    </span>
+                </div>
+
+            </div>
+            
+            <div class="col-sm-6 clear-mrg">
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Maven</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Spark</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Storm</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                        <span class="bullet"></span>
+                    </span>
+                </div>
+
+                <div class="progress-bullets crt-animate" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10">
+                    <strong class="progress-title">Jekyll</strong>
+                    <span class="progress-bar">
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                        <span class="bullet fill"></span>
+                    </span>
+                </div>
+
             </div>
 
         </div><!-- .col-sm-6 -->
