--- a/_includes/resumer_04-experience.html
+++ b/_includes/resumer_04-experience.html
@@ -5,29 +5,17 @@
             <br />
             <div class="education">
                 <div class="education-box">
-                    <time class="education-date" datetime="2016-01TNow">
+                    <time class="education-date" datetime="2003-07TNow">
                         <span>Jan <strong class="text-upper">2016</strong> - <strong>Now</strong></span>
                     </time>
-                    <h3>Java Developer</h3>
-                    <span class="education-company">央企ERP项目 | 大连IBM</span>
-                    <p>使用技术为struts, hibernate, spring等等</p>
-                    <p>负责项目中服务开发</p>
-                    <p>参与部分需求调研</p>
-                    <p>。。。</p>
+                    <h3>复旦大学计算机科学技术学院教师</h3>
+                    <span class="education-company">高级讲师，硕士生导师</span>
+                    <span class="education-company">校教学发展中心FD-QM项目组研究员</span>
+                   <span class="education-company">校教学督导</span>
                 </div>
                 <!-- .education-box -->
 
-                <div class="education-box">
-                    <time class="education-date" datetime="2014-09T2016-01">
-                        <span>Sep <strong class="text-upper">2014</strong> - Jan <strong>2016</strong></span>
-                    </time>
-                    <h3>Java Developer</h3>
-                    <span class="education-company">日本本田项目 | 大连IBM</span>
-                    <p>使用技术为struts, hibernate, spring等等</p>
-                    <p>负责项目中服务开发</p>
-                    <p>参与部分需求调研</p>
-                    <p>。。。</p>
-                </div>
+               
             </div>
         </div>
     </div>
