--- a/resume.io/_includes/resumer_06-personal_project.html
+++ b/resume.io/_includes/resumer_06-personal_project.html
@@ -1,9 +1,9 @@
 <section class="section" id="personal_project">
     <h2 class="title-thin text-muted">个人作品</h2>
-<--
+<!--
 
     <div class="pf-wrap">
-        <div class="pf-grid">
+        <div class="!pf-grid">
 
         <div class="pf-grid-sizer"></div><!-- used for sizing -->
 
