--- a/_includes/resumer_04-experience.html
+++ b/_includes/resumer_04-experience.html
@@ -9,8 +9,8 @@
                         <span>Jan <strong class="text-upper">2003</strong> - <strong>Now</strong></span>
                     </time>
                     <h3>复旦大学计算机科学技术学院教师</h3>
-                    <span class="education-company">高级讲师，硕士生导师</span>
-                    <span class="education-company">校教学发展中心FD-QM项目组研究员</span>
+                    <span class="education-company">高级讲师，硕士生导师</span><br />
+                    <span class="education-company">校教学发展中心FD-QM项目组研究员</span><br />
                    <span class="education-company">校教学督导</span>
                 </div>
                 <!-- .education-box -->
